--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,15 @@
   font-family: "Teko", "Times New Roman", Times, serif;
 }
 
+/*Header and Nav Bar*/
+
 header {
   border: 5px solid black;
   box-shadow: 0 0 50px;
   background-color: black;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 header h1 {
@@ -26,18 +31,64 @@ a {
   color: white;
 }
 
+section {
+  position: relative;
+  left: 400px;
+  top: 200px;
+  border: 1px solid black;
+  width: 600px;
+  box-shadow: 0 0 50px;
+  background-color: #0085ff36;
+}
+
+/*Img and Main Box*/
+
+h2 {
+  position: relative;
+  left: 245px;
+}
+
 img {
   display: block;
+  position: relative;
+  left: 150px;
   width: 200px;
   height: 200px;
+  border: 4px solid #ffffff;
+  box-shadow: 0 0 15px;
 }
+
+figcaption {
+  font-size: 13px;
+  position: relative;
+  left: 150px;
+}
+
+#Invite {
+  color: black;
+  position: relative;
+  left: 10px;
+}
+
+/*Contact Form*/
+
+#contact-form {
+  background-color: #747468;
+}
+
+/*The Footer Section*/
+
 footer {
   border: 5px solid black;
   box-shadow: 0 0 50px;
   background-color: black;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
-footer p {
+#copyright {
   color: white;
-  text-align: center;
+  position: relative;
+  left: 600px;
 }
